update Covid company data and acquisition codes

--- a/dataset_acquisition_code/Get_Health_Stock_List.ipynb
+++ b/dataset_acquisition_code/Get_Health_Stock_List.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "59947d0f-7024-48a9-b498-ede33430aa3a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "7b73e88e-1ca5-4ae9-8cca-a247b1f251e9",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "e65c683b-17c7-45c5-ae22-6df7bc72fbc9",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "96a0ae71-c509-43d8-bbf0-964e8a021c2e",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "7c4d235e-f800-441e-aa99-473532c22143",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "69941093-fde9-40cf-922a-a2b2cf3a5551",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
        "[505 rows x 3 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "700b1f6c-7c37-4cc0-a487-ea0e07eb05e1",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
        "10               Utilities      28       28"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "146e419f-fa30-42b5-bc0d-ba4136073f8a",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "19   ALGN      Align Technology  Health Care"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,12 +421,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "1d826ec9-fbae-48af-9b0a-aefb3a65ac40",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SPX_Health.to_csv('SPX_Health_Sector_info.csv',index=False)"
+    "SPX_Health.to_csv('../Datasets/SPX_Health_Sector_info.csv',index=False)"
    ]
   },
   {
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "42b0af2d-c1d0-4bd0-9ece-eed2fdd8b59a",
    "metadata": {},
    "outputs": [],
