--- a/dataset_acquisition_code/Get_Health_Stocks_Data.ipynb
+++ b/dataset_acquisition_code/Get_Health_Stocks_Data.ipynb
@@ -995,12 +995,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "3c45f960-a12d-4818-839b-103c61658cbe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Health_stocks' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-3251a8404123>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mHealth_stocks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../Datasets/SPX_Health_Sector_stocks.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'Health_stocks' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "Health_stocks.to_csv('SPX_Health_Sector_stocks.csv',index=False)"
+    "Health_stocks.to_csv('../Datasets/SPX_Health_Sector_stocks.csv',index=False)"
    ]
   },
   {
