Fix SPX sector csv and code

--- a/dataset_acquisition_code/Clean_SPX_sector_df.ipynb
+++ b/dataset_acquisition_code/Clean_SPX_sector_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "21cf7370-9dda-4fcc-9500-dda0f654399b",
    "metadata": {},
    "outputs": [],
@@ -12,18 +12,36 @@
     "import time\n",
     "import os\n",
     "import glob\n",
-    "from dateutil.parser import parse"
+    "# from dateutil.parser import parse (pandas build-in)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "985e85e3-9ff7-4882-81be-f78c79261132",
    "metadata": {},
    "outputs": [],
    "source": [
     "folder = '../Datasets/sp500indexand11sectors/'\n",
     "files = [i for i in glob.glob(folder + '*.csv')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "6002a495-bb6a-44c8-8cb0-bede5586c02d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['../Datasets/sp500indexand11sectors/S5UTIL INDEX.csv', '../Datasets/sp500indexand11sectors/SPX INDEX.csv', '../Datasets/sp500indexand11sectors/S5CONS INDEX.csv', '../Datasets/sp500indexand11sectors/S5HLTH INDEX.csv', '../Datasets/sp500indexand11sectors/S5RLST Index.csv', '../Datasets/sp500indexand11sectors/S5TELS INDEX.csv', '../Datasets/sp500indexand11sectors/S5INDU INDEX.csv', '../Datasets/sp500indexand11sectors/S5COND INDEX.csv', '../Datasets/sp500indexand11sectors/S5INFT INDEX.csv', '../Datasets/sp500indexand11sectors/S5MATR INDEX.csv', '../Datasets/sp500indexand11sectors/S5ENRS INDEX.csv', '../Datasets/sp500indexand11sectors/S5FINL INDEX.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(files)"
    ]
   },
   {
@@ -38,125 +56,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "6924847e-8ffe-4fed-9f15-c15e006d907c",
    "metadata": {},
    "outputs": [],
    "source": [
     "for fp in files:\n",
-    "    #df=pd.read_csv(fp, header=None, usecols=[0,1,2,3,4])\n",
-    "    df=pd.read_csv(fp, usecols=[0,1,2,3,4])\n",
-    "    #df.columns = ['Date','Open', 'High', 'Low', 'Close']\n",
-    "    for i in df['Date']:\n",
-    "        df['Date'] = parse(i).strftime(\"%Y-%m-%d\")\n",
+    "    df=pd.read_csv(fp, header=None, usecols=[0,1,2,3,4])\n",
+    "    #df=pd.read_csv(fp, usecols=[0,1,2,3,4])\n",
+    "    df.columns = ['Date','Open', 'High', 'Low', 'Close']\n",
+    "    df['Date']=pd.to_datetime(df['Date'])\n",
+    "    df['Date']=df['Date'].dt.strftime(\"%Y-%m-%d\")\n",
+    "    #for i in df['Date']: (don't use for loop, too slow)\n",
+    "        #df['Date'] = parse(i).strftime(\"%Y-%m-%d\")\n",
     "    #there are some errors returning df for certain dates, need to fix later\n",
     "    #pd.to_datetime(df['Date'])\n",
-    "    #df = df.loc[(df['Date'] >= '2020-03-12') & (df['Date'] <= '2021-12-31')]\n",
-    "    #df.to_csv(fp,index=False)\n",
+    "    df = df.loc[(df['Date'] >= '2020-03-12') & (df['Date'] <= '2021-12-31')]\n",
+    "    df.to_csv(fp,index=False)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "7114446f-6932-4e7b-a0d1-bed4bd4ed9a8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1989-09-11</td>\n",
-       "      <td>80.46</td>\n",
-       "      <td>80.46</td>\n",
-       "      <td>80.46</td>\n",
-       "      <td>80.46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1989-09-11</td>\n",
-       "      <td>80.60</td>\n",
-       "      <td>80.60</td>\n",
-       "      <td>80.60</td>\n",
-       "      <td>80.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1989-09-11</td>\n",
-       "      <td>79.77</td>\n",
-       "      <td>79.77</td>\n",
-       "      <td>79.77</td>\n",
-       "      <td>79.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1989-09-11</td>\n",
-       "      <td>79.05</td>\n",
-       "      <td>79.05</td>\n",
-       "      <td>79.05</td>\n",
-       "      <td>79.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1989-09-11</td>\n",
-       "      <td>79.69</td>\n",
-       "      <td>79.69</td>\n",
-       "      <td>79.69</td>\n",
-       "      <td>79.69</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Date   Open   High    Low  Close\n",
-       "0  1989-09-11  80.46  80.46  80.46  80.46\n",
-       "1  1989-09-11  80.60  80.60  80.60  80.60\n",
-       "2  1989-09-11  79.77  79.77  79.77  79.77\n",
-       "3  1989-09-11  79.05  79.05  79.05  79.05\n",
-       "4  1989-09-11  79.69  79.69  79.69  79.69"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "224439d5-8596-4143-8f29-2aee76e8f859",
    "metadata": {},
    "outputs": [
     {
@@ -198,40 +121,13 @@
        "Index: []"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = df.loc[(df['Date'] >= '2020-03-12') & (df['Date'] <= '2021-12-31')]\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "d0758d7b-0738-417a-8ada-6a3f145545a1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Date      object\n",
-       "Open     float64\n",
-       "High     float64\n",
-       "Low      float64\n",
-       "Close    float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.dtypes"
+    "df.head()"
    ]
   },
   {
