--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -27,19 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d820b0ec-fc1f-45ec-a272-62f641b1b008",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "health_info = pd.read_csv(\"datasets/SPX_Health_Sector_info.csv\")\n",
-    "health_stocks = pd.read_csv(\"datasets/SPX_Health_Sector_stocks.csv\")"
+    "health_info = pd.read_csv(\"datasets_complete/SPX_Health_Sector_info.csv\")\n",
+    "health_stocks = pd.read_csv(\"datasets_complete/SPX_Health_Sector_stocks_all.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9552d203-52c2-420b-87f9-53578efe2282",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "4   ALGN      Align Technology  Health Care"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4e4f7bfc-7101-4f2c-9979-8765223bb957",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "4                        78.7228                  141919  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a635810e-8ad6-4caf-ba87-3e9d0f9b3120",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
        "47    PFE             Pfizer  Health Care"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "2b26d73a-e39e-4c1a-84e4-109cce6d26f8",
    "metadata": {},
    "outputs": [
@@ -406,17 +406,174 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>28764</th>\n",
+       "      <td>NVAX</td>\n",
+       "      <td>2020-03-11</td>\n",
+       "      <td>9.510</td>\n",
+       "      <td>10.47</td>\n",
+       "      <td>9.15</td>\n",
+       "      <td>9.29</td>\n",
+       "      <td>5488378.0</td>\n",
+       "      <td>9.6803</td>\n",
+       "      <td>29246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28765</th>\n",
+       "      <td>NVAX</td>\n",
+       "      <td>2020-03-12</td>\n",
+       "      <td>9.500</td>\n",
+       "      <td>9.73</td>\n",
+       "      <td>7.52</td>\n",
+       "      <td>8.41</td>\n",
+       "      <td>6115375.0</td>\n",
+       "      <td>8.3492</td>\n",
+       "      <td>29065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28766</th>\n",
+       "      <td>NVAX</td>\n",
+       "      <td>2020-03-15</td>\n",
+       "      <td>7.770</td>\n",
+       "      <td>8.14</td>\n",
+       "      <td>6.77</td>\n",
+       "      <td>6.91</td>\n",
+       "      <td>4779370.0</td>\n",
+       "      <td>7.3645</td>\n",
+       "      <td>26430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28767</th>\n",
+       "      <td>NVAX</td>\n",
+       "      <td>2020-03-16</td>\n",
+       "      <td>8.000</td>\n",
+       "      <td>10.19</td>\n",
+       "      <td>7.85</td>\n",
+       "      <td>9.50</td>\n",
+       "      <td>11623967.0</td>\n",
+       "      <td>9.0007</td>\n",
+       "      <td>51842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28768</th>\n",
+       "      <td>NVAX</td>\n",
+       "      <td>2020-03-17</td>\n",
+       "      <td>8.850</td>\n",
+       "      <td>11.48</td>\n",
+       "      <td>8.80</td>\n",
+       "      <td>10.65</td>\n",
+       "      <td>11034050.0</td>\n",
+       "      <td>10.6100</td>\n",
+       "      <td>51365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29216</th>\n",
+       "      <td>NVAX</td>\n",
+       "      <td>2021-12-26</td>\n",
+       "      <td>168.555</td>\n",
+       "      <td>169.39</td>\n",
+       "      <td>155.11</td>\n",
+       "      <td>157.80</td>\n",
+       "      <td>8934203.0</td>\n",
+       "      <td>160.0433</td>\n",
+       "      <td>159765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29217</th>\n",
+       "      <td>NVAX</td>\n",
+       "      <td>2021-12-27</td>\n",
+       "      <td>153.160</td>\n",
+       "      <td>175.99</td>\n",
+       "      <td>153.10</td>\n",
+       "      <td>155.84</td>\n",
+       "      <td>12384643.0</td>\n",
+       "      <td>162.9178</td>\n",
+       "      <td>185409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29218</th>\n",
+       "      <td>NVAX</td>\n",
+       "      <td>2021-12-28</td>\n",
+       "      <td>153.280</td>\n",
+       "      <td>155.28</td>\n",
+       "      <td>144.56</td>\n",
+       "      <td>153.25</td>\n",
+       "      <td>7511780.0</td>\n",
+       "      <td>150.6786</td>\n",
+       "      <td>111874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29219</th>\n",
+       "      <td>NVAX</td>\n",
+       "      <td>2021-12-29</td>\n",
+       "      <td>152.780</td>\n",
+       "      <td>159.00</td>\n",
+       "      <td>148.86</td>\n",
+       "      <td>154.83</td>\n",
+       "      <td>5093321.0</td>\n",
+       "      <td>154.1007</td>\n",
+       "      <td>82034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29220</th>\n",
+       "      <td>NVAX</td>\n",
+       "      <td>2021-12-30</td>\n",
+       "      <td>151.470</td>\n",
+       "      <td>156.81</td>\n",
+       "      <td>141.51</td>\n",
+       "      <td>143.07</td>\n",
+       "      <td>9096268.0</td>\n",
+       "      <td>147.5569</td>\n",
+       "      <td>136453</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>457 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Ticker, Date, Open, High, Low, Close, Trading Volume, Volume Weighted Average Price, Number of Transactions]\n",
-       "Index: []"
+       "      Ticker        Date     Open    High     Low   Close  Trading Volume  \\\n",
+       "28764   NVAX  2020-03-11    9.510   10.47    9.15    9.29       5488378.0   \n",
+       "28765   NVAX  2020-03-12    9.500    9.73    7.52    8.41       6115375.0   \n",
+       "28766   NVAX  2020-03-15    7.770    8.14    6.77    6.91       4779370.0   \n",
+       "28767   NVAX  2020-03-16    8.000   10.19    7.85    9.50      11623967.0   \n",
+       "28768   NVAX  2020-03-17    8.850   11.48    8.80   10.65      11034050.0   \n",
+       "...      ...         ...      ...     ...     ...     ...             ...   \n",
+       "29216   NVAX  2021-12-26  168.555  169.39  155.11  157.80       8934203.0   \n",
+       "29217   NVAX  2021-12-27  153.160  175.99  153.10  155.84      12384643.0   \n",
+       "29218   NVAX  2021-12-28  153.280  155.28  144.56  153.25       7511780.0   \n",
+       "29219   NVAX  2021-12-29  152.780  159.00  148.86  154.83       5093321.0   \n",
+       "29220   NVAX  2021-12-30  151.470  156.81  141.51  143.07       9096268.0   \n",
+       "\n",
+       "       Volume Weighted Average Price  Number of Transactions  \n",
+       "28764                         9.6803                   29246  \n",
+       "28765                         8.3492                   29065  \n",
+       "28766                         7.3645                   26430  \n",
+       "28767                         9.0007                   51842  \n",
+       "28768                        10.6100                   51365  \n",
+       "...                              ...                     ...  \n",
+       "29216                       160.0433                  159765  \n",
+       "29217                       162.9178                  185409  \n",
+       "29218                       150.6786                  111874  \n",
+       "29219                       154.1007                   82034  \n",
+       "29220                       147.5569                  136453  \n",
+       "\n",
+       "[457 rows x 9 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ea31980c-e611-4fcc-b9ad-fa2ebdf163e3",
    "metadata": {},
    "outputs": [],
@@ -439,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "70d7f97c-a07b-41e7-9347-8f553d46c5d6",
    "metadata": {},
    "outputs": [
@@ -476,7 +633,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
+       "      <th>39</th>\n",
        "      <td>JNJ</td>\n",
        "      <td>156.597147</td>\n",
        "      <td>157.860809</td>\n",
@@ -487,7 +644,7 @@
        "      <td>80705.925602</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
+       "      <th>45</th>\n",
        "      <td>MRNA</td>\n",
        "      <td>168.193166</td>\n",
        "      <td>174.032215</td>\n",
@@ -498,7 +655,18 @@
        "      <td>184799.975930</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46</th>\n",
+       "      <th>47</th>\n",
+       "      <td>NVAX</td>\n",
+       "      <td>144.280074</td>\n",
+       "      <td>150.692114</td>\n",
+       "      <td>137.922014</td>\n",
+       "      <td>144.341958</td>\n",
+       "      <td>5.782316e+06</td>\n",
+       "      <td>144.409323</td>\n",
+       "      <td>69980.286652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
        "      <td>PFE</td>\n",
        "      <td>39.586145</td>\n",
        "      <td>40.023168</td>\n",
@@ -509,7 +677,7 @@
        "      <td>167039.428884</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>52</th>\n",
+       "      <th>55</th>\n",
        "      <td>TECH</td>\n",
        "      <td>358.834158</td>\n",
        "      <td>364.209563</td>\n",
@@ -525,19 +693,21 @@
       ],
       "text/plain": [
        "   Ticker        Open        High         Low       Close  Trading Volume  \\\n",
-       "37    JNJ  156.597147  157.860809  155.297358  156.588621    7.665814e+06   \n",
-       "43   MRNA  168.193166  174.032215  162.749246  168.896236    1.635277e+07   \n",
-       "46    PFE   39.586145   40.023168   39.122255   39.574923    3.363763e+07   \n",
-       "52   TECH  358.834158  364.209563  353.362007  358.958403    2.278757e+05   \n",
+       "39    JNJ  156.597147  157.860809  155.297358  156.588621    7.665814e+06   \n",
+       "45   MRNA  168.193166  174.032215  162.749246  168.896236    1.635277e+07   \n",
+       "47   NVAX  144.280074  150.692114  137.922014  144.341958    5.782316e+06   \n",
+       "49    PFE   39.586145   40.023168   39.122255   39.574923    3.363763e+07   \n",
+       "55   TECH  358.834158  364.209563  353.362007  358.958403    2.278757e+05   \n",
        "\n",
        "    Volume Weighted Average Price  Number of Transactions  \n",
-       "37                     156.597481            80705.925602  \n",
-       "43                     168.603666           184799.975930  \n",
-       "46                      39.566838           167039.428884  \n",
-       "52                     358.847335             5868.698031  "
+       "39                     156.597481            80705.925602  \n",
+       "45                     168.603666           184799.975930  \n",
+       "47                     144.409323            69980.286652  \n",
+       "49                      39.566838           167039.428884  \n",
+       "55                     358.847335             5868.698031  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
