Minor update: Column name. Time Range: 2020-03-11 to 2021-03-11

--- a/analysis_2.ipynb
+++ b/analysis_2.ipynb
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "b4bd5f61-2ed5-4bfd-a8d0-b99bfecee9a8",
    "metadata": {},
    "outputs": [
@@ -1346,7 +1346,7 @@
        "[5 rows x 457 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,19 +1358,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "00829ab0-b2f5-4b2a-b4b5-f8068a2f97d8",
    "metadata": {},
    "outputs": [],
    "source": [
     "meta_pivot_return = meta_pivot.Close[[\"2020-03-11\",\"2021-12-30\"]]\n",
-    "stock_return = (meta_pivot_annual[\"2021-12-30\"] - meta_pivot_annual[\"2020-03-11\"])/meta_pivot_annual[\"2020-03-11\"]*100\n",
+    "stock_return = (meta_pivot_return[\"2021-12-30\"] - meta_pivot_return[\"2020-03-11\"])/meta_pivot_return[\"2020-03-11\"]*100\n",
     "meta_pivot_return[\"Return from 2020-03-11 to 2021-12-30(%)\"] = round(stock_return, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "ed2eb684-d3ab-4373-98b6-45a28485aa7e",
    "metadata": {},
    "outputs": [
@@ -1458,7 +1458,7 @@
        "PFE          30.02       59.05                                    96.70"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "07a53b62-741d-40ae-9e4f-880ddcef68ea",
    "metadata": {},
    "outputs": [
@@ -1634,7 +1634,7 @@
        "4                        78.7228                  141919  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "id": "6cd2249b-ae2d-418a-b985-b26bc69a9730",
    "metadata": {},
    "outputs": [
@@ -1892,7 +1892,7 @@
        "[5 rows x 457 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1904,18 +1904,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "id": "9c149457-9dce-49d9-b120-885adfbcad46",
    "metadata": {},
    "outputs": [],
    "source": [
     "spx_health_return = spx_Health_pivot.Close[[\"2020-03-11\",\"2021-03-11\"]]\n",
-    "spx_health_return[\"Annual Return\"] = round((spx_health_return[\"2021-03-11\"] - spx_health_return[\"2020-03-11\"])/spx_health_return[\"2020-03-11\"]*100, 2)"
+    "spx_health_return[\"Annual Return (%)\"] = round((spx_health_return[\"2021-03-11\"] - spx_health_return[\"2020-03-11\"])/spx_health_return[\"2020-03-11\"]*100, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 22,
    "id": "82caa22c-6b5d-4286-a705-9140712d3618",
    "metadata": {},
    "outputs": [],
@@ -1925,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 23,
    "id": "32a54d41-5c14-4028-95f1-724b2def05dd",
    "metadata": {},
    "outputs": [
@@ -1951,7 +1951,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th>Date</th>\n",
        "      <th>Ticker</th>\n",
-       "      <th>Annual Return</th>\n",
+       "      <th>Annual Return (%)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2016,34 +2016,34 @@
        "</div>"
       ],
       "text/plain": [
-       "Date Ticker  Annual Return\n",
-       "0         A          91.49\n",
-       "1      ABBV          37.67\n",
-       "2       ABC          40.29\n",
-       "3      ABMD         121.62\n",
-       "4       ABT          56.15\n",
-       "..      ...            ...\n",
-       "62      WAT          60.93\n",
-       "63      WST          92.01\n",
-       "64     XRAY          57.48\n",
-       "65      ZBH          59.91\n",
-       "66      ZTS          26.85\n",
+       "Date Ticker  Annual Return (%)\n",
+       "0         A              91.49\n",
+       "1      ABBV              37.67\n",
+       "2       ABC              40.29\n",
+       "3      ABMD             121.62\n",
+       "4       ABT              56.15\n",
+       "..      ...                ...\n",
+       "62      WAT              60.93\n",
+       "63      WST              92.01\n",
+       "64     XRAY              57.48\n",
+       "65      ZBH              59.91\n",
+       "66      ZTS              26.85\n",
        "\n",
        "[67 rows x 2 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spx_health_return[[\"Ticker\",\"Annual Return\"]]"
+    "spx_health_return[[\"Ticker\",\"Annual Return (%)\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "id": "fa1c12bb-4a61-4438-b542-1064b99ab580",
    "metadata": {},
    "outputs": [],
