--- a/Connection.ipynb
+++ b/Connection.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "04ae6d07-79fe-463c-a125-b5b6c2a27e3b",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "835966d0-063b-49e4-8ccb-123fa7f30a5d",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "518742f4-f42e-49f4-88a0-8c370826ec23",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "cb9dd5f8-9ed5-4aef-94ab-77aefd13bfbc",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "f5e20886-f753-4ebf-b41f-481b1fd035cd",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
        "[7068 rows x 11 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "261b593b-ce02-414d-a6dc-1eadd7be6b33",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,7 @@
        "[458 rows x 15 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "68f7437e-3a8b-4853-8489-3a492c96ca5b",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "38c1bc81-9440-4208-88ad-8ded68abebfc",
    "metadata": {},
    "outputs": [
@@ -823,7 +823,7 @@
        "0    30.0    30.02     60585686.0                 30.6586      307447.0  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "id": "8034a454-424b-4064-891f-19de69512ebc",
    "metadata": {},
    "outputs": [
@@ -1076,19 +1076,19 @@
        "[1512 rows x 11 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# testing tesing testing\n",
-    "covid_stocks_with_covid_data[covid_stocks_with_covid_data[\"PandemicDate\"] >= \"2021-03-21\"]"
+    "covid_stocks_with_covid_data[covid_stocks_with_covid_data[\"PandemicDate\"] >= \"2021-02-21\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "id": "274b1df5-1eca-46cc-81ab-22fed5006beb",
    "metadata": {},
    "outputs": [
@@ -1329,7 +1329,7 @@
        "[1512 rows x 11 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "d306207b-0d42-4101-aa15-d1222140a256",
    "metadata": {},
    "outputs": [],
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "f6f0fca9-3891-4db4-86ea-4012cbaa6aeb",
    "metadata": {},
    "outputs": [],
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "697bbd0c-4329-4838-bcf2-40314cd3bbd8",
    "metadata": {},
    "outputs": [],
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "d05e6eac-53c4-4450-a405-91cb91fdec97",
    "metadata": {},
    "outputs": [
@@ -1625,7 +1625,7 @@
        "[4050 rows x 11 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "118dbb35-8ac4-402c-9a15-fcb0304f9af3",
    "metadata": {},
    "outputs": [],
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "499e5a6d-da0a-444a-99f5-62d3d0f0282a",
    "metadata": {},
    "outputs": [
@@ -1752,7 +1752,7 @@
        "4             2020-03-17   39.36  92.00  134.96  31.58  10.65  32.36"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "c88e0c7e-17cb-4397-873f-64cddc6e18c7",
    "metadata": {},
    "outputs": [
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "564ab0aa-1a5b-4279-bc59-2fb9e03cb919",
    "metadata": {},
    "outputs": [
@@ -2105,7 +2105,7 @@
        "[224 rows x 15 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2116,17 +2116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "d2f15242-709b-4ae5-bf9a-3f9acda7b675",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1227ff390>"
+       "<matplotlib.legend.Legend at 0x1208dad10>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
