--- a/Regression on health sector.ipynb
+++ b/Regression on health sector.ipynb
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x121097990>]"
+       "[<matplotlib.lines.Line2D at 0x7f8de1e70910>]"
       ]
      },
      "execution_count": 4,
@@ -331,7 +331,7 @@
     {
      "data": {
       "text/plain": [
-       "1251031.7962204556"
+       "1712.621918408985"
       ]
      },
      "execution_count": 15,
@@ -344,12 +344,12 @@
     "# (The MSE is a measure of the quality of an estimator. As it is derived from the square of Euclidean distance, \n",
     "# it is always a positive value that decreases as the error approaches zero) Per Wiki. \n",
     "\n",
-    "mean_squared_error(x,y_pred)"
+    "mean_squared_error(y,y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "11334d2c",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
        "0.9324717200447334"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
