--- a/Stock_Market_Prediction_SPX_health_sector_all.ipynb
+++ b/Stock_Market_Prediction_SPX_health_sector_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "a57a3729",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "a2c5b09c",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "[30135 rows x 9 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "f39bb769",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
        "       [253.56]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "8b925797",
    "metadata": {},
    "outputs": [],
@@ -280,34 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "d9dbefd6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.03856637],\n",
-       "       [0.0412921 ],\n",
-       "       [0.03701807],\n",
-       "       ...,\n",
-       "       [0.13384316],\n",
-       "       [0.13613912],\n",
-       "       [0.14469896]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "training_set_scaled."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "0230bc30",
    "metadata": {},
    "outputs": [],
@@ -327,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "a15e3895",
    "metadata": {},
    "outputs": [
@@ -550,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0eca50ea",
    "metadata": {},
    "outputs": [],
@@ -564,6 +537,64 @@
     "from keras.layers import LSTM\n",
     "from keras.layers import Dropout"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "439bde68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialising the RNN\n",
+    "# Regression is when you predict a continuous value\n",
+    "regressor = Sequential()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "30365ae7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding the first LSTM layer and some Dropout regularisation\n",
+    "# 'units' is the number of LSTM Memory Cells (Neurons) for higher dimensionality\n",
+    "# 'return_sequences = True' because we will add more stacked LSTM Layers\n",
+    "# 'input_shape' of x_train\n",
+    "regressor.add(LSTM(units = 50, return_sequences = True, input_shape = (X_train.shape[1], 1)))\n",
+    "# 20% of Neurons will be ignored (10 out of 50 Neurons) to prevent Overfitting\n",
+    "regressor.add(Dropout(0.2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "adfb4eae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding a second LSTM layer and some Dropout regularisation\n",
+    "# Not need to specify input_shape for second Layer, it knows that we have 50 Neurons from the previous layer\n",
+    "regressor.add(LSTM(units = 50, return_sequences = True))\n",
+    "regressor.add(Dropout(0.2))\n",
+    "\n",
+    "# Adding a third LSTM layer and some Dropout regularisation\n",
+    "regressor.add(LSTM(units = 50, return_sequences = True))\n",
+    "regressor.add(Dropout(0.2))\n",
+    "\n",
+    "# Adding a fourth LSTM layer and some Dropout regularisation\n",
+    "# This is the last LSTM Layer. 'return_sequences = false' by default so we leave it out.\n",
+    "regressor.add(LSTM(units = 50))\n",
+    "regressor.add(Dropout(0.2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01181d86",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
